# coremlit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  MODELS_LOCK  NOTICE  README.md
crates/alignkit/: Cargo.toml
crates/alignkit/assets/: chordai_base960h_tokenizer.json
crates/alignkit/benches/: align.rs
crates/alignkit/src/: compute_units_serde.rs  lib.rs
crates/alignkit/src/aligner/: mod.rs  tests.rs
crates/alignkit/src/encode/: mod.rs  tests.rs
crates/alignkit/src/error/: mod.rs  tests.rs
crates/alignkit/src/registry/: mod.rs  tests.rs
crates/alignkit/src/vocab/: mod.rs
crates/alignkit/tests/: align_chunk.rs  align_chunk_equivalence.rs  model_io.rs  parity_emissions.rs  parity_words.rs  prepared_composition.rs  registry_handle.rs
crates/alignkit/tests/common/: mod.rs
crates/clapkit/: Cargo.toml  NOTICE  README.md
crates/clapkit/conversion/: README.md  run_clapkit.sh
crates/clapkit/conversion/scripts/: _fixtures.py  inspect_struct.py  measure_melgraph.py  mel_in_graph_probe.py  probe_wrappers.py  verify_encoders.py
crates/clapkit/src/: compute_units_serde.rs  lib.rs
crates/clapkit/src/aggregate/: mod.rs  tests.rs
crates/clapkit/src/audio/: mod.rs  tests.rs
crates/clapkit/src/embedding/: mod.rs  tests.rs
crates/clapkit/src/error/: mod.rs  tests.rs
crates/clapkit/src/score/: mod.rs  tests.rs
crates/clapkit/src/text/: mod.rs  tests.rs
crates/clapkit/src/window/: mod.rs  tests.rs
crates/clapkit/tests/: e2e.rs  model_io.rs  parity_textclap.rs  placement.rs  text_model_io.rs  tokenizer_identity.rs  tokenizer_identity_textclap.rs
crates/clapkit/tests/common/: mod.rs
crates/coremlit/: Cargo.toml  FEATURE_MAP.md  build.rs
crates/coremlit/benches/align/: align.rs
crates/coremlit/benches/clap/: encode.rs
crates/coremlit/benches/whisper/: rtf.rs  stages.rs
crates/coremlit/conversion/: .gitignore
crates/coremlit/conversion/ced/: README.md  run_ced.sh
crates/coremlit/conversion/clap/: README.md  run_clapkit.sh
crates/coremlit/conversion/siglip/: README.md  run_siglip.sh
crates/coremlit/examples/whisper/: mic_stream.rs  transcribe_wav.rs
crates/coremlit/src/: lib.rs
crates/coremlit/src/audio/: mod.rs
crates/coremlit/src/dtype/: mod.rs  tests.rs
crates/coremlit/src/embeddings/: mod.rs
crates/coremlit/src/error/: mod.rs  tests.rs
crates/coremlit/src/features/: mod.rs  tests.rs
crates/coremlit/src/model/: mod.rs  tests.rs
crates/coremlit/src/multi_array/: mod.rs  tests.rs
crates/coremlit/src/state/: mod.rs  tests.rs
crates/coremlit/src/units/: mod.rs  tests.rs
crates/coremlit/tests/: compile.rs  feature_map.rs  fp16_guards.rs  fp16_sweep_inventory.sh  tiny_model.rs
crates/coremlit/tests/align/: align_chunk.rs  align_chunk_equivalence.rs  model_io.rs  parity_words.rs  prepared_composition.rs  registry_handle.rs
crates/coremlit/tests/ced/: e2e.rs  model_io.rs  parity_logits.rs  placement.rs
crates/coremlit/tests/clap/: e2e.rs  model_io.rs  parity_textclap.rs  placement.rs  text_model_io.rs  tokenizer_identity.rs  tokenizer_identity_textclap.rs
crates/coremlit/tests/common/: mod.rs
crates/coremlit/tests/fixtures/: identity.mlmodel
crates/coremlit/tests/granite/: embed_long.rs  model_io.rs  parity_embed.rs  placement.rs  tokenizer_identity.rs
crates/coremlit/tests/siglip/: e2e.rs  model_io.rs  parity_embed.rs  placement.rs  preprocess.rs  text_model_io.rs  tokenizer_identity.rs
crates/coremlit/tests/speaker/: argmax_model_io.rs  der_gate_inventory.sh  generate_goldens.rs  golden_metadata.rs  model_io.rs  offline_cross_crate_equivalence.rs  parity_argmax_accuracy.rs  parity_argmax_swift.rs  parity_diarize_wiring.rs  parity_e2e.rs  parity_embed.rs  parity_online_swift.rs  parity_seg.rs  parity_shipping_der.rs  plda_cross_crate_equivalence.rs
crates/coremlit/tests/vad/: cross_backend.rs  model_io.rs  model_state.rs  parity_swift.rs  reexport.rs
crates/coremlit/tests/whisper/: longform.rs  model_io.rs  models_lock.rs  parity_es.rs  parity_jfk.rs  pipeline.rs  streaming.rs  vad_source.rs
crates/coremlit/tests/whisper_swift_probes/: README.md  probe_argmax.out  probe_argmax.swift  probe_argmax2.out  probe_massrule.out  probe_massrule.swift  probe_massrule2.out
crates/dia-coreml/: Cargo.toml
crates/dia-coreml/src/: compute_units_serde.rs  lib.rs
crates/dia-coreml/src/embed/: mod.rs  tests.rs
crates/dia-coreml/src/error/: mod.rs  tests.rs
crates/dia-coreml/src/extract/: tests.rs
crates/dia-coreml/src/segment/: mod.rs  tests.rs
crates/dia-coreml/src/window/: mod.rs  tests.rs
crates/dia-coreml/tests/: generate_goldens.rs  model_io.rs  parity_embed.rs  parity_seg.rs
crates/dia-coreml/tests/common/: mod.rs
crates/speakerkit/: Cargo.toml  README.md
crates/speakerkit/src/: lib.rs
crates/speakerkit/src/cluster/: mod.rs  tests.rs
crates/speakerkit/src/embed/: tests.rs
crates/speakerkit/src/error/: mod.rs  tests.rs
crates/speakerkit/src/extract/: mod.rs  tests.rs
crates/speakerkit/src/segment/: mod.rs  tests.rs
crates/speakerkit/src/source/: argmax.rs  mod.rs  tests.rs
crates/speakerkit/src/window/: mod.rs  tests.rs
crates/speakerkit/tests/: argmax_model_io.rs  der_gate_inventory.sh  generate_goldens.rs  golden_metadata.rs  model_io.rs  offline_cross_crate_equivalence.rs  parity_argmax_accuracy.rs  parity_argmax_swift.rs  parity_diarize_wiring.rs  parity_e2e.rs  parity_embed.rs  parity_online_swift.rs  parity_seg.rs  parity_shipping_der.rs  plda_cross_crate_equivalence.rs
crates/speakerkit/tests/common/: mod.rs
crates/speakerkit/tests/der_calc/: mod.rs
crates/speakerkit/tests/swift/: Package.swift
crates/vadkit/: Cargo.toml  NOTICE  README.md
crates/vadkit/src/: backend.rs  lib.rs
crates/vadkit/tests/: cross_backend.rs  model_state.rs  parity_swift.rs  reexport.rs
crates/whisperkit/: Cargo.toml
crates/whisperkit/benches/: rtf.rs
crates/whisperkit/examples/: mic_stream.rs  transcribe_wav.rs
crates/whisperkit/src/: lib.rs
crates/whisperkit/tests/: longform.rs  model_io.rs  models_lock.rs  parity_es.rs  parity_jfk.rs  pipeline.rs
(+259 files in other folders)
