[workspace]
resolver = "3"
members = ["crates/coremlit"]

[workspace.package]
version = "0.1.0"
edition = "2024"
# MSRV floor is set by two pinned git dependencies — coremlit's `asry` (the
# `align` feature) and `dia`/diarization (the `speaker` feature) — both of
# which need rustc 1.95.
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/findit-studio/coremlit"

[workspace.dependencies]
objc2 = "0.6"
objc2-core-ml = { version = "0.3", features = ["block2", "objc2-core-video"] }
objc2-foundation = "0.3"
objc2-core-video = "0.3"
objc2-core-foundation = "0.3"
objc2-natural-language = { version = "0.3", default-features = false, features = [
  "std",
  "NLLanguage",
  "NLLanguageRecognizer",
] }
block2 = "0.6"
half = "2.7"
thiserror = "2"
derive_more = { version = "2.1", features = ["display", "is_variant"] }
tokenizers = { version = "0.23", default-features = false, features = ["unstable_wasm"] }
flate2 = "1"
unicode_categories = "0.1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
serde_json = "1"
libc = "0.2"
mach2 = "0.4"
tempfile = "3"
rand = "0.9"
hound = "3.5"
sha2 = "0.11"
cpal = "0.16"
rubato = "0.16"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

# CO-DEV RECIPE (do NOT commit the patch itself): coremlit's optional `dia`
# dependency (the `speaker` feature) is pinned to the diarization repo by exact
# git rev (crates/coremlit/Cargo.toml). To build the `speaker` feature against a
# LOCAL diarization checkout instead — e.g. while co-developing an unmerged change —
# add this UNCOMMITTED `[patch]` here (Cargo honors `[patch]` only at the
# workspace root):
#
#   [patch."https://github.com/findit-studio/diarization"]
#   dia = { path = "../diarization", package = "diarization" }
#
# `../diarization` is the sibling checkout relative to THIS workspace root; Cargo
# then resolves `dia` to it for every crate in the workspace. Keep it out of
# commits so CI and fresh checkouts continue to resolve the pinned rev.

[workspace.lints.rust]
missing_docs = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
single_use_lifetimes = { level = "warn", priority = -1 }

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"
