[workspace]
resolver = "3"
members = ["crates/coremlit", "crates/whisperkit", "crates/speakerkit"]

[workspace.package]
version = "0.1.0"
edition = "2024"
# MSRV floor is set by speakerkit's pinned `diaric` (runtime) git dependency,
# which needs rustc 1.95 (the optional `dia`/`diarization` oracle also needs 1.95).
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/findit-studio/coremlit"

[workspace.dependencies]
coremlit = { version = "0.1.0", path = "crates/coremlit" }
objc2 = "0.6"
objc2-core-ml = { version = "0.3", features = ["block2", "objc2-core-video"] }
objc2-foundation = "0.3"
objc2-core-video = "0.3"
objc2-core-foundation = "0.3"
objc2-natural-language = { version = "0.3", default-features = false, features = [
  "std",
  "NLLanguage",
  "NLLanguageRecognizer",
] }
block2 = "0.6"
half = "2.7"
thiserror = "2"
derive_more = { version = "2.1", features = ["display", "is_variant"] }
tokenizers = { version = "0.23", default-features = false, features = ["unstable_wasm"] }
flate2 = "1"
unicode_categories = "0.1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
serde_json = "1"
libc = "0.2"
mach2 = "0.4"
tempfile = "3"
rand = "0.9"
hound = "3.5"
cpal = "0.16"
rubato = "0.16"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
sha2 = "0.10"

# CO-DEV RECIPE (do NOT commit the patch itself): speakerkit pins TWO git deps by
# exact rev (crates/speakerkit/Cargo.toml) — `diaric`, the always-on ONNX-free
# runtime clustering core, and `dia`/`diarization`, the test-only DER reference
# oracle activated by the `dia-oracle` feature. To build either against a LOCAL
# checkout instead — e.g. while co-developing an unmerged change — add the matching
# UNCOMMITTED `[patch]` here (Cargo honors `[patch]` only at the workspace root):
#
#   [patch."https://github.com/findit-studio/diaric"]
#   diaric = { path = "../diaric" }
#
#   [patch."https://github.com/findit-studio/diarization"]
#   dia = { path = "../diarization", package = "diarization" }
#
# `../diaric` / `../diarization` are sibling checkouts relative to THIS workspace
# root; Cargo then resolves each dep to its checkout for every crate in the
# workspace. Keep the patch out of commits so CI and fresh checkouts continue to
# resolve the pinned revs. Verify a co-dev build with
# `cargo test -p speakerkit --features dia-oracle`.

[workspace.lints.rust]
missing_docs = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
single_use_lifetimes = { level = "warn", priority = -1 }

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"
