[workspace]
resolver = "3"
members = ["crates/coremlit"]


[workspace.package]
version = "0.1.0"
edition = "2024"
# MSRV floor is set by three pinned git dependencies — coremlit's `asry` (the
# `align` feature), `diaric` (the `speaker` runtime clustering core), and the
# `dia`/diarization DER oracle (`speaker-oracle`) — all of which need rustc 1.95.
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/findit-studio/coremlit"

[workspace.dependencies]
objc2 = "0.6"
objc2-core-ml = { version = "0.3", features = ["block2", "objc2-core-video"] }
objc2-foundation = "0.3"
objc2-core-video = "0.3"
objc2-core-foundation = "0.3"
objc2-natural-language = { version = "0.3", default-features = false, features = [
  "std",
  "NLLanguage",
  "NLLanguageRecognizer",
] }
block2 = "0.6"
half = "2.7"
thiserror = "2"
derive_more = { version = "2.1", features = ["display", "is_variant"] }
tokenizers = { version = "0.23", default-features = false, features = ["unstable_wasm"] }
flate2 = "1"
unicode_categories = "0.1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
serde_json = "1"
libc = "0.2"
mach2 = "0.6"
tempfile = "3"
rand = "0.9"
hound = "3.5"
sha2 = "0.11"
rustfft = "6"
npyz = "0.9"
cpal = "0.16"
rubato = "0.16"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
# Pure-Rust PNG decoder — a DEV-dep only, for decoding the committed siglip
# corpus PNG fixtures in tests (the crate itself is sans-I/O: `Rgb8Image` takes
# already-decoded RGB, so no image-decoder enters the library's own graph).
png = "0.17"

[workspace.lints.rust]
missing_docs = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
single_use_lifetimes = { level = "warn", priority = -1 }

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"
