[package]
name = "alignkit"
description = "CoreML wav2vec2 forced word-level alignment"
version.workspace = true
edition.workspace = true
# Unpublishable: `asry` is a local path dependency (see the `[dependencies]`
# entry below) and its own `emissions` feature isn't published either; flip
# once both land on a released asry version.
publish = false
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["alignment", "forced-alignment", "wav2vec2", "coreml", "speech"]
categories = ["multimedia::audio", "os::macos-apis", "science"]

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin"]

[dependencies]
coremlit.workspace = true
thiserror.workspace = true

# The clean, ort-free dependency: asry's `emissions` seam only (no
# `whispercpp`, no `ort`). The B3 interim default-features-ON workaround
# is retired now that asry's `lang.rs` decouple landed on `main` — an
# `emissions`-only selection no longer trips `asry::types::lang`'s
# `pub use whispercpp::Lang`. The path resolves to the real asry checkout
# via a workspace-relative symlink in the dev worktree layout.
asry = { path = "../../../asry", default-features = false, features = ["emissions"] }

serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
tracing = ["dep:tracing"]

[dev-dependencies]
# The B5 word-timing parity gate will re-add asry with the
# `parity-dump-emission` feature (which implies `alignment`: ort +
# whisper.cpp + the ONNX wav2vec2 oracle) as a dev-dependency. B4 does
# not link that oracle: its own end-to-end test drives only alignkit's
# CoreML pipeline, and `asry` is already available to tests through the
# `[dependencies]` entry above (emissions-only). Keeping ort/whisper.cpp
# out of alignkit's own test build until B5 needs it.
hound.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokenizers.workspace = true

[lints]
workspace = true
