[package]
name = "alignkit"
description = "CoreML wav2vec2 forced word-level alignment"
version.workspace = true
edition.workspace = true
# Unpublishable: `asry` is a local path dependency (see the `[dependencies]`
# entry below) and its own `emissions` feature isn't published either; flip
# once both land on a released asry version.
publish = false
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["alignment", "forced-alignment", "wav2vec2", "coreml", "speech"]
categories = ["multimedia::audio", "os::macos-apis", "science"]

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin"]

[dependencies]
coremlit.workspace = true
derive_more.workspace = true
thiserror.workspace = true

# The clean, ort-free dependency: asry's `emissions` seam only (no
# `whispercpp`, no `ort`). The B3 interim default-features-ON workaround
# is retired now that asry's `lang.rs` decouple landed on `main` — an
# `emissions`-only selection no longer trips `asry::types::lang`'s
# `pub use whispercpp::Lang`. The path resolves to the real asry checkout
# via a workspace-relative symlink in the dev worktree layout.
asry = { path = "../../../asry", default-features = false, features = ["emissions"] }

serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
tracing = ["dep:tracing"]
# DEV/TEST ONLY — adds nothing to this library.
#
# Turns on `asry`'s `alignment` feature, which lights up its ONNX-Runtime
# forced aligner (`asry::Aligner`) — the ORACLE the word-timing parity gate
# (`tests/parity_words.rs`) measures alignkit against. That feature implies
# asry's `runner`, so enabling this drags **ort + whisper.cpp** into the
# build; a first compile pays a whisper.cpp cmake build measured in minutes.
#
# It is a feature rather than a plain dev-dependency because Cargo unions
# features across `[dependencies]` and `[dev-dependencies]` for the same
# package: a dev-dep on `asry/alignment` would put ort and whisper.cpp into
# EVERY `cargo test -p alignkit` build, which is exactly what B4 removed.
# Behind this feature, plus `required-features` on the `parity_words` test
# target below, an ordinary `cargo test -p alignkit` links neither.
#
# The parity gate therefore needs its feature named explicitly:
#
#   cargo test -p alignkit --features parity-oracle -- --ignored
#
# `ort` is in `load-dynamic` mode, so the build needs no ONNX Runtime, but
# RUNNING the gate needs `libonnxruntime.dylib` on the loader path (Homebrew
# `onnxruntime`, or point `ORT_DYLIB_PATH` at it).
parity-oracle = ["asry/alignment"]

# `required-features` (not an `#[ignore]`, not a `#[cfg]`) is what keeps ort
# out of the default test build: without `parity-oracle` cargo does not
# BUILD this target at all. Every other `tests/*.rs` stays auto-discovered.
[[test]]
name = "parity_words"
path = "tests/parity_words.rs"
required-features = ["parity-oracle"]

[[bench]]
name = "align"
harness = false

[dev-dependencies]
# An integration test (`tests/*.rs`) is an external consumer: it links the
# `alignkit` lib and the DEV-dependencies, never the lib's own
# `[dependencies]`. `tests/parity_words.rs` names `asry::Aligner` (the ONNX
# oracle) directly, so `asry` must appear here too. Cargo unions the features
# of both entries, so this adds nothing on its own — `emissions` comes from
# `[dependencies]` above, and `alignment` arrives only with `parity-oracle`.
asry = { path = "../../../asry", default-features = false }
criterion.workspace = true
hound.workspace = true
# `tests/parity_words.rs`'s ONNX-Runtime preflight (F3): before ort's own
# `dlopen` — which DEADLOCKS rather than erroring when the dylib is unusable —
# it proves the library actually LOADS and exports `OrtGetApiBase`, by trying it
# in a child process with a timeout. `libloading` performs the load there; the
# `unsafe` it requires lives ONLY in that test-crate child helper, so the
# `alignkit` library stays unsafe-free. `tempfile` backs the hermetic unit test
# that feeds the validator a non-dylib file. Both are tiny, test-only, and (via
# the `parity_words` target's `required-features`) exercised only under
# `parity-oracle` — they drag in nothing like ort/whisper.cpp.
libloading = "0.8"
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokenizers.workspace = true

[lints]
workspace = true
