[package]
name = "coremlit"
description = "Safe, synchronous CoreML runtime layer: model loading, prediction, stateful prediction, and typed multi-arrays"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["coreml", "machine-learning", "macos", "neural-engine", "ffi"]
categories = ["api-bindings", "os::macos-apis", "science"]

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin"]

[dependencies]
objc2.workspace = true
objc2-core-ml.workspace = true
objc2-foundation.workspace = true
objc2-core-video.workspace = true
objc2-core-foundation.workspace = true
block2.workspace = true
half.workspace = true
thiserror.workspace = true
derive_more.workspace = true

# `tests/fp16_guards.rs` corroborates its 2^-24 threshold against a real
# fp16 rounding rather than trusting a hand-written constant. Integration
# tests do not inherit `[dependencies]`, so `half` is named again here.
[dev-dependencies]
half.workspace = true

[lints]
workspace = true
